tests/errors/different_file.vrv
import * from "./type_error"
